--- a/style.css
+++ b/style.css
@@ -50,13 +50,18 @@ body {
     padding: 10px;
     font-size: 1rem;
     cursor: pointer;
-    background-color: #4caf50;
+    background-color: #000000;
     color: white;
     border: none;
     border-radius: 5px;
   }
   
   form button:hover {
-    background-color: #45a049;
+    background-color: #002fff;
   }
-  
+  img
+  {
+    width: 80px;
+    height: 80px;
+
+  }
